objects/advitya__AuditTrialStore__c.object
<CustomObject>
    <fields>
        <fullName>advitya__Fields__c</fullName>
        <label>Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__Object__c</fullName>
        <label>Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advitya__UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AuditTrialStore</label>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>AuditStore Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AuditTrialStore</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>